# EasyQSettings

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  CustomSettings.cpp  CustomSettings.h  main.cpp
include/: CMakeLists.txt  EasyQSettings.h
